@@ -1,1 +1,6 @@
 TEMPLATE = subdirs
+
+# Use "make check" to run the test suite!
+
+SUBDIRS = \
+    tst_libspdr
