@@ -1,0 +1,8 @@
+include(../../libraryIncludes.pri)
+include(../../definitions.pri)
+
+QT = core testlib
+
+CONFIG += testcase
+
+SOURCES += tst_spdrbase.cpp
